--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -5,3 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello World $USER"
+  checkout-repo:
+    runs-on: ubuntu-latest
+    needs:
+      - print-hello-world
+    steps:
+      - uses: actions/checkout@v3
+      - run: ls
+      - run: pwd
