--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,5 +1,8 @@
 name: "unit-test"
-on: [push]
+on:
+  pull_request:
+    branches:
+      - main
 jobs:
   run-unit-test:
     runs-on: ubuntu-latest
