--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -5,6 +5,7 @@ on:
       - main
 jobs:
   run-unit-test:
+    if: github.event.label.name == 'backend'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
