--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,6 +1,10 @@
 name: "unit-test"
 on:
   pull_request:
+    types:
+      - labeled
+      - synchronize
+      - unlabeled
     branches:
       - main
 jobs:
