--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -10,9 +10,9 @@ on:
 jobs:
   print-pr-labels:
     runs-on: ubuntu-latest
-    env:
-      PR_LABELS: ${{ github.event.pull_request.labels }}
     steps:
+      - env:
+          PR_LABELS: ${{ github.event.pull_request.labels }}
       - run: echo $PR_LABELS
   run-unit-test:
     if: github.event.label.name == 'backend'
