--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -9,7 +9,7 @@ on:
       - main
 jobs:
   run-unit-test:
-    if: contains(github.event.pull_request.labels, 'backend')
+    if: ${{ contains(github.event.pull_request.labels, 'backend') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
