--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -3,10 +3,13 @@ on:
   pull_request:
     types:
       - synchronize
+      - labeled
+      - unlabeled
     branches:
       - main
 jobs:
   run-unit-test:
+    if: contains(github.event.pull_request.labels.*.name, 'backend')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
