--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -12,16 +12,17 @@ jobs:
     if: contains(github.event.pull_request.labels.*.name, 'backend')
     runs-on: ubuntu-latest
     env:
-      DB_HOST: localhost
-      DB_USER: root
-      DB_NAME: todo
+      TEST_DB_NAME: todo
+      TEST_DB_USER: root
+      TEST_DB_PASSWORD: ""
+      TEST_DB_HOST: localhost
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
       - run: npm i
-      - run: npm run knex:migrate:latest
+      - run: npm run knex:migrate:latest --env test
       - run: npm test
     services:
       database:
