--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       TEST_DB_NAME: todo
       TEST_DB_USER: root
-      TEST_DB_PASSWORD: ""
+      TEST_DB_PASSWORD: my-secret-pw
       TEST_DB_HOST: localhost
       NODE_ENV: test
     steps:
