--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --testTimeout=10000",
+    "test": "jest --testTimeout=10000",
+    "test:local": "NODE_ENV=development jest --testTimeout=10000",
     "start": "node index.js",
     "knex:init": "knex init",
     "knex:migrate:make": "knex migrate:make",
