--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.3.0",
-    "mysql2": "^2.3.3"
+    "pg": "^8.8.0",
+    "pg-native": "^3.0.1"
   },
   "devDependencies": {
     "jest": "^29.1.2",
