enhance insert code and unit test workflow

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 16
       - run: npm i
       - run: pip install wait-for-it
-      - run: wait-for-it --service localhost:3306 --timeout 30 -- echo "MySQL server is ready"
+      - run: wait-for-it --service localhost:5432 --timeout 30 -- echo "PostgreSQL server is ready"
       - run: npm run knex:migrate:latest
       - run: npm test
     services:
