--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -13,15 +13,15 @@ jobs:
         with:
           switches: -avzr --delete
           path: src/
-          remote_path: /var/www/html/
-          remote_host: example.com
-          remote_user: debian
-          remote_key: ${{ secrets.DEPLOY_KEY }}
-      - name: Migrate database
+          remote_path: ${{ secrets.REMOTE_PATH }}
+          remote_host: ${{ secrets.HOST }}
+          remote_user: ${{ secrets.USERNAME }}
+          remote_key: ${{ secrets.SSH_KEY }}
+      - name: Install deps and Migrate database
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT }}
-          script: npm run knex:migrate:latest
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            ls apps
